# toby-magick

./: .gitignore  README.md  TobyMagick.ps1  craco.config.js  package-lock.json  package.json  tsconfig.json
api/: pyproject.toml
api/app/: __init__.py
installer/: Install.ps1
src/: App.tsx  index.css
src/components/: BearHead.tsx  ImageMagick.tsx  Wireframe.tsx
src/components/BearHead/: index.tsx
src/components/ImageMagick/: index.css  index.tsx  options.ts
src/components/ImageMagick/Option/: index.tsx
src/components/Wireframe/: index.tsx
src/interfaces/: ComponentProps.ts  component-props.ts
src/utils/: constants.ts  drawing.ts  keypoints.ts  magick-entry-clock.ts  magickTimer.ts
web/: .prettierrc.js  craco.config.js
web/public/: index.html  manifest.json
web/src/: App.tsx  index.css
web/src/components/BearHead/: index.tsx
web/src/components/ImageMagick/: index.css  index.tsx  options.ts
web/src/components/ImageMagick/Option/: index.css  index.tsx
web/src/components/Wireframe/: index.tsx
web/src/interfaces/: component-props.ts  requests.ts
web/src/requests/: magick.ts
web/src/utils/: constants.ts  drawing.ts  fps.ts  keypoints.ts  magick-entry-clock.ts
